# Leopard_project_C

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LeopardBuild.vcxproj  LeopardBuild.vcxproj.filters  Leopard_project_C.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  arpino_assignment2.txt  assignment3.db.db  christian.txt  cmake_install.cmake  main.c  main.cpp  ryuta.txt  test.txt  torys.txt
LeopardBuild.dir/Debug/: LeopardBuild.exe.recipe  LeopardBuild.ilk  _IsIncrementalBuild
LeopardBuild.dir/Debug/LeopardBuild.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  LeopardBuild.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
database/: assignment3.db.db
inc/: Admin.h  Instructor.h  Student.h  User.h
src/: Admin.cpp  Admin.h  Instructor.cpp  Student.c  Student.cpp  User.cpp  cpp_sqlite_leopard.cpp  cpp_sqlite_programmers.cpp  cpp_sqlite_programmers1.cpp  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
